# stitch

./: CMakeLists.txt  CalibParam.py  main.cpp
include/: color_balance.h  cylinder.h  cylinder_projection.h  readData.h  stitch.h  stitching.h
src/: color_balance.cpp  cylinder.cu  cylinder_projection.cpp  readData.cpp  stitch.cu  stitching.cpp  test
